--- a/weixin2flomo/todo.txt
+++ b/weixin2flomo/todo.txt
@@ -5,8 +5,40 @@ TODO:
 时间管理技能如何积累
 目标实现的技能如何积累
 精力管理的技能如何积累
-
 发展副业还有哪些误区？
 
+精力管理的几个重点：
+积极的精力仪式习惯有三点重要性。
+首先它确保精力有效使用在当下的任务上，其次能够减少行为对主观意愿和自律的依赖，
+它还能将价值观和目标感有效转化为行动，通过日常行为展现我们最为看重的事物。
+面对的困难越大，人们越容易退回旧日的生存习惯，因此良好的习惯非常重要面对难度越大的挑战，仪式习惯越要细致入微。
+
+几个消耗精力的方式：
+● 逃避真相会消耗大量精力。
+● 我们会自我欺骗以保护自尊。
+● 有些真相太难以承受，无法一次性消化。
+● 不带怜悯的诚实是种残酷，对人对己均是如此。
+● 我们不愿承认自己身上具有某些品质，却仍然会不自知地表现出来。
+● 自我欺骗的常见形式是认定自己的看法就是真相，而它不过是我们解读世界的方式。
+● 面对真相需要我们保持开放的心态，承认自己被蒙蔽的可能性。
+● 过于坚持自己的一面之词是种假象，也是危险。我们都是光明与暗影、美德与恶行的混合体。
+● 承认自己的局限性能帮助我们降低自我防御，增强积极精力。
+
+为了尽快获取直观感受，请拿出一张纸、一支笔，用至少30分钟回答以下问题：
+从1到10，你如何为自己在工作中的投入程度打分？是什么阻碍了你的表现？
+● 你的日常行为有多少符合你的价值观，并为你的使命服务？脱节的地方在哪里？
+● 你的工作表现多大程度上反映了你的价值观、符合自我构想？在家的表现呢？社区中的表现呢？哪里做得不足？
+● 身体方面的日常习惯——饮食、锻炼、睡眠、平衡压力——如何有助于你的核心价值观？
+● 你的情感回应在所有情况下如何符合你的价值观？在工作中与在家里是否程度不同？如果答案是肯定的，为什么会出现这样的情况？
+● 你对任务清晰的轻重缓急区分和持续的专注力表现如何？优先级的事情多大程度上符合你认为最重要的事情？睡眠、饮食、锻炼习惯如何影响你可调动的精力？
+● 你有多少负面精力消耗在了自我防御上——沮丧、愤怒、恐惧、怨恨和嫉妒？反之，你有多少正面精力投入在成长和产出上？
+● 你有多少精力投入在自己身上，有多少精力投入他人？对当前的平衡你感觉如何？对这样的平衡你最亲近的人有何感想？
+● 你消耗了多少精力为超出你掌控的事担心、沮丧，并试图影响它们？
+● 最后，你是否明智且高效地投资了你的精力？
+
+所以精力管理也包括情绪管理。
+所以真正好的情绪管理是什么呢？
+是理解情绪，感受情绪，接纳情绪并且释放情绪。
 
 
+突然想到
