--- a/weixin2flomo/todo.txt
+++ b/weixin2flomo/todo.txt
@@ -46,3 +46,37 @@ TODO:
 ● 想想你最敬重的一个人，描述他/她身上你最钦佩的3种品质。
 ● 你能做到的最好的自己是什么样的？
 ● 你希望你的墓志铭如何总结你的人生？
+
+
+人类就是靠讲故事“征服地球”的
+这个故事好奇特，需要好好研究下。
+
+
+目前写教材是否存在这样的问题？
+列思维导图把每个环节都写考虑到了吗？
+
+这几个技巧需要分别找到错误的案例和正确的案例，分别分析、点评，最后自己改写下。
+制定自己的写作练习计划。
+一定要解决自己害怕分享文章带来的负面效应，自己非常不喜欢分享。或者说自己是不愿意分享。
+
+
+ICF国际认证教练
+ISPI国际绩效改进协会认证教练
+公司学习官网：https://portal.learn.woa.com/technology/index.html?page_id=492
+
+如何把抖音的视频都扒下来，把视频转成文字？
+
+
+标签：#领域/写作
+〇：
+在自媒体时代，如果想要写作获得关注，需要具备的能力有什么？
+爆款选题策划能力，找到痛点，解决痛点
+爆款写作能力，痛点库，观点库，素材库，金句库
+
+结束
+
+写作中的观点、事实、现象、结论是一回事吗？
+
+
+书读多了之后的后遗症是不喜欢看电视，对很多肤浅的内容完全没有兴趣。
+和家人很难一起做娱乐活动。
