--- a/weixin2flomo/todo.txt
+++ b/weixin2flomo/todo.txt
@@ -12,6 +12,9 @@ TODO:
 精力管理的技能如何积累
 什么是情绪价值？如何增加情绪价值？
 
+人类就是靠讲故事“征服地球”的
+这个故事好奇特，需要好好研究下。
+
 教育：
 为什么要去教导一个不愿意学习的孩子？
 把一个好学生送到清华北大有成就感还是把一个坏学生教成好学生有成就感？
@@ -23,6 +26,9 @@ TODO:
 判断在什么时间、什么地方需要压制自己的分享，什么时候可以开始自己的分享？
 测评一下自己喜欢的零食
 这个和现在主流的观点"人不为己天诛地灭"是相反概念，所以到底应该听谁的呢？
+一定要解决自己害怕分享文章带来的负面效应，自己非常不喜欢分享。或者说自己是不愿意分享。
+书读多了之后的后遗症是不喜欢看电视，对很多肤浅的内容完全没有兴趣。
+和家人很难一起做娱乐活动。
 
 生完孩子之后的计划：
 1. 去新疆、东北旅游
@@ -47,36 +53,22 @@ TODO:
 ● 你能做到的最好的自己是什么样的？
 ● 你希望你的墓志铭如何总结你的人生？
 
-
-人类就是靠讲故事“征服地球”的
-这个故事好奇特，需要好好研究下。
-
-
+教材：
 目前写教材是否存在这样的问题？
 列思维导图把每个环节都写考虑到了吗？
-
-这几个技巧需要分别找到错误的案例和正确的案例，分别分析、点评，最后自己改写下。
-制定自己的写作练习计划。
-一定要解决自己害怕分享文章带来的负面效应，自己非常不喜欢分享。或者说自己是不愿意分享。
-
 
 ICF国际认证教练
 ISPI国际绩效改进协会认证教练
 公司学习官网：https://portal.learn.woa.com/technology/index.html?page_id=492
 
-如何把抖音的视频都扒下来，把视频转成文字？
+TODO:
+积累素材库
+四步写随笔大纲
+制定自己的写作练习计划。
+写作中的观点、事实、现象、结论是一回事吗？
 
-
-标签：#领域/写作
-〇：
 在自媒体时代，如果想要写作获得关注，需要具备的能力有什么？
 爆款选题策划能力，找到痛点，解决痛点
 爆款写作能力，痛点库，观点库，素材库，金句库
 
-结束
-
-写作中的观点、事实、现象、结论是一回事吗？
-
-
-书读多了之后的后遗症是不喜欢看电视，对很多肤浅的内容完全没有兴趣。
-和家人很难一起做娱乐活动。
+如何把抖音的视频都扒下来，把视频转成文字？
